Better error messages in User controller
